--- a/src/Web.config
+++ b/src/Web.config
@@ -22,7 +22,7 @@
   </serverConfiguration>
   <viewerConfiguration>
     <!--Absolute or relative path to documents storage-->
-    <add key="filesDirectory" value="/App_Data/" />
+    <add key="filesDirectory" value="" />
     <!--Directory where all fonts files are stored-->
     <add key="fontsDirectory" value="" />
     <!--Default document to view-->
@@ -54,7 +54,7 @@
   </viewerConfiguration>
   <signatureConfiguration>
     <!--Absolute or relative path to documents storage-->
-    <add key="filesDirectory" value="/App_Data/" />
+    <add key="filesDirectory" value="" />
     <!--Directory where all signed files are stored-->
     <add key="outputDirectory" value="" />
     <!--Directory used to store signatures data - default SignatureData-->
