--- a/src/GroupDocs.Signature.WebForms.csproj
+++ b/src/GroupDocs.Signature.WebForms.csproj
@@ -219,6 +219,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Products\Common\Config\ApplicationConfiguration.cs" />
+    <Compile Include="Products\Common\Config\CommonConfiguration.cs" />
     <Compile Include="Products\Common\Config\GlobalConfiguration.cs" />
     <Compile Include="Products\Common\Config\ServerConfiguration.cs" />
     <Compile Include="Products\Common\Entity\Web\ExceptionEntity.cs" />
@@ -260,7 +261,6 @@
     <Compile Include="Products\Signature\Util\Directory\FilesDirectoryUtils.cs" />
     <Compile Include="Products\Signature\Util\Directory\IDirectoryUtils.cs" />
     <Compile Include="Products\Signature\Util\Directory\OutputDirectoryUtils.cs" />
-    <Compile Include="Products\Viewer\Config\ViewerConfiguration.cs" />
     <Compile Include="Signature.aspx.cs">
       <DependentUpon>Signature.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
