--- a/src/Web.config
+++ b/src/Web.config
@@ -8,7 +8,7 @@
     <section name="signatureConfiguration" type="System.Configuration.NameValueSectionHandler" />
     <section name="applicationConfiguration" type="System.Configuration.NameValueSectionHandler" />
     <section name="serverConfiguration" type="System.Configuration.NameValueSectionHandler" />
-    <section name="viewerConfiguration" type="System.Configuration.NameValueSectionHandler" />
+    <section name="commonConfiguration" type="System.Configuration.NameValueSectionHandler" />
   </configSections>
   <applicationConfiguration>
     <!--Absolute path to GroupDocs license file-->
@@ -20,25 +20,9 @@
     <!--HTTP Port-->
     <add key="httpPort" value="8080" />
   </serverConfiguration>
-  <viewerConfiguration>
-    <!--Absolute or relative path to documents storage-->
-    <add key="filesDirectory" value="C:/GroupDocs/Documents/" />
-    <!--Directory where all fonts files are stored-->
-    <add key="fontsDirectory" value="" />
-    <!--Default document to view-->
-    <add key="defaultDocument" value="" />
-    <!--Number of pages for preload, 0 for all-->
-    <add key="preloadPageCount" value="0" />
-    <!--Enable/disable zoom elements-->
-    <add key="isZoom" value="false" />
+  <commonConfiguration>
     <!--Enable/disable page navigation elements-->
     <add key="isPageSelector" value="true" />
-    <!--Enable/disable search-->
-    <add key="isSearch" value="true" />
-    <!--Enable/disable thumbnails-->
-    <add key="isThumbnails" value="true" />
-    <!--Enable/disable page rotate feature-->
-    <add key="isRotate" value="true" />
     <!--Enable/disable document download-->
     <add key="isDownload" value="true" />
     <!--Enable/disable document upload-->
@@ -47,16 +31,18 @@
     <add key="isPrint" value="true" />
     <!--Enable/disable documents browse-->
     <add key="isBrowse" value="true" />
-    <!--HTML or image rendering mode, false for image mode-->
-    <add key="isHtmlMode" value="true" />
     <!--Enable/disable rewriting, if false uploaded document with name which exists will be saved as new copy -->
     <add key="isRewrite" value="true" />
-  </viewerConfiguration>
+  </commonConfiguration>  
   <signatureConfiguration>
     <!--Absolute or relative path to documents storage-->
-    <add key="filesDirectory" value="C:/GroupDocs/Documents/" />
+    <add key="filesDirectory" value="C:/GroupDocs/Documents" />
     <!--Directory where all signed files are stored-->
     <add key="outputDirectory" value="" />
+    <!--Default document to view-->
+    <add key="defaultDocument" value="" />
+    <!--Number of pages for preload, 0 for all-->
+    <add key="preloadPageCount" value="0" />
     <!--Directory used to store signatures data - default SignatureData-->
     <add key="dataDirectory" value="" />
     <!--Enable/disable text signature-->
@@ -75,7 +61,7 @@
     <add key="isDownloadOriginal" value="true" />
     <!--Enable/disable download signed document-->
     <add key="isDownloadSigned" value="true" />
-  </signatureConfiguration> 
+  </signatureConfiguration>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
