--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -73,6 +73,8 @@ signature:
   barCodeSignature: true
   # Enable/disable Stamp signature
   stampSignature: true
+  # Enable/disable Hand signature
+  handSignature: true
   # Enable/disable original document downloading
   downloadOriginal: true
   # Enable/disable signed document downloading
