--- a/src/package.json
+++ b/src/package.json
@@ -15,13 +15,5 @@
   "bugs": {
     "url": "https://github.com/groupdocs-signature/GroupDocs.Signature-for-.NET-WebForms/issues"
   },
-  "homepage": "https://github.com/groupdocs-signature/GroupDocs.Signature-for-.NET-WebForms#readme",
-  "dependencies": {
-    "@groupdocs.examples.jquery/common": "^0.16.0",
-    "@groupdocs.examples.jquery/signature": "^0.16.0",
-    "@groupdocs.examples.jquery/viewer": "^0.16.0"
-  },
-  "devDependencies": {
-    "gulp": "^4.0.0"
-  }
+  "homepage": "https://github.com/groupdocs-signature/GroupDocs.Signature-for-.NET-WebForms#readme"
 }
