Update configuration with partial code-style improvement.

--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -79,3 +79,5 @@ signature:
   downloadOriginal: true
   # Enable/disable signed document downloading
   downloadSigned: true
+  # Enable/disable zoom
+  zoom: true
